# odx-ce

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/arch/: Dockerfile  PKGBUILD  build-archpkg.sh
packaging/debian/: Dockerfile  build-deb.sh
packaging/windows/: Dockerfile  build-installer.sh  odx.nsi
scripts/: download-odoo-versions.sh  odoo-versions.sh
scripts/release/: build-all.sh  bump-and-release.sh  version.sh
src/: cli.rs  config.rs  lib.rs  main.rs  utils.rs
src/commands/: clean.rs  db.rs  doctor.rs  i18n.rs  install.rs  mod.rs  new.rs  run.rs  setup.rs  shell.rs  sync.rs  test.rs  update.rs  update_module.rs
src/dependencies/: system-deps.toml
src/project_template/: .gitignore.template  AGENTS.md.template  README.md.template  compose.yml.template  odoo.conf.template
tests/: integration_tests.rs
