[package]
name = "odoo-cli"
version = "1.0.0"
edition = "2021"
description = "odx: Odoo development CLI"
license = "MIT"
repository = "https://github.com/drkpkg/odx-ce"

[package.metadata.deb]
name = "odx"
maintainer = "drkpkg"
copyright = "2026"
license-file = ["LICENSE", "4"]
extended-description = """\
odx is a Rust CLI to scaffold and operate Odoo development projects.\
"""
depends = "python3, python3-venv, ca-certificates"
section = "utils"
priority = "optional"
assets = [
  ["target/release/odx", "usr/bin/odx", "755"],
  ["README.md", "usr/share/doc/odx/README.md", "644"],
]

[[bin]]
name = "odx"
path = "src/main.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
configparser = "3.0"
dirs = "5.0"
which = "4.4"
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi"] }
